@@ -128,3 +128,7 @@ for FPGA).
 
 Bugfix: fixed unpredictable behaviour when combining looped timestep groups
 with retrigger waits.
+
+Rename "Wait-for-retrigger" to "Hold-then-retrigger" to better reflect its actual
+behavior (the beginning of the hold word will be output, THEN the sequence will wait,
+and THEN the sequence will continue running the rest of the word once a retrigger is received).
